<resources>
    <string name="app_name">Places</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_a_place">Create a place</string>
    <string name="loading">loading...</string>
    <string name="logout">Log out</string>
    <string name="title_liked">Liked</string>
    <string name="title_search">Search</string>
    <string name="title_recommend">Recommend</string>
    <string name="title_profile">Profile</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_location">Choose location</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="fast_food">Burgers</string>
    <string name="italian">Italian</string>
    <string name="coffee">Coffee</string>
    <string name="japanese">Japanese</string>
    <string name="drinks">Drinks</string>
    <string name="share_with_the_world">Share with the world!</string>
    <string name="create_place">Create place</string>
    <string name="create_a_new_place">Create a new place!</string>
    <string name="search">Search</string>
    <string name="search_dots">Search...</string>
    <string name="users">Users</string>
    <string name="places">Places</string>
    <string name="no_results_found">No results found</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Following</string>
    <string name="followers_0">Followers: 0</string>
    <string name="example">example</string>
    <string name="category">Category: </string>
    <string name="location">Location</string>
    <string name="_0_likes">0 likes</string>
    <string name="published_by">Posted by:</string>
    <string name="edit">Edit</string>
    <string name="make_public">make public</string>
    <string name="delete">Delete</string>
    <string name="make_private">MAKE PRIVATE</string>
    <string name="sure_question">Sure?</string>
    <string name="take_a_new_profile_picture">Take a new profile picture</string>
    <string name="retake">Retake</string>
    <string name="post">Post</string>
    <string name="update_info">To update your information click on it</string>
    <string name="private_places">Private places</string>
    <string name="find_in_range">Find in range:</string>
    <string name="find_nearby">Find nearby</string>
    <string name="details">details</string>
    <string name="close_tag">[x]</string>
    <string name="server_api_key">S0Vta5WnL435W3cma5atcWPczodY!AXU8flc9nE#Zv4^nd1xuLyDmZZ&amp;c#PRjMc**9$z2JvklH*4GQH$n4SLIl9bwUNTdzY0K6b</string>
    <string name="seems_you_don_t_follow_anyone">Seems you don\'t follow anyone</string>
    <string name="top_recommendations_for_you">Top recommendations for you</string>
    <string name="promote">Promote</string>
    <string name="what_is_a_promotion">What is a promotion?</string>
    <string name="promotion_description">When you promote a place, our powerful backend will use the best algorithms in order to find the best users to recommend the place to. This users will see the place the next time they login into the app. Then, you will have statistics about how your promotion went.</string>
    <string name="cancel">Cancel</string>
    <string name="paid_promotion">Paid promotion</string>
    <string name="you_may_like">You may like:</string>
    <string name="ignore">Ignore</string>
    <string name="view">View</string>
    <string name="my_promotions">My promotions</string>
    <string name="sent">Sent</string>
    <string name="viewed">Viewed</string>
    <string name="clicked">Clicked</string>
    <string name="server_url">http://192.168.1.201:5000/</string>
    <string name="send">send</string>
    <string name="write_here">Write here..</string>
</resources>