<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_liked"
        android:icon="@drawable/icon_like"
        android:title="@string/title_liked" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/icon_star"
        android:title="@string/title_recommend" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />

</menu>