<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.places.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_liked"
        android:name="com.example.places.ui.liked.LikedFragment"
        android:label="@string/title_liked"
        tools:layout="@layout/liked_fragment" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.places.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/navigation_recommend"
        android:name="com.example.places.ui.recommend.RecommendFragment"
        android:label="@string/title_recommend"
        tools:layout="@layout/recommend_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.places.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

</navigation>