<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/createPlace"
        android:actionLayout="@layout/activity_main"
        android:icon="@drawable/icon_add"
        android:orderInCategory="200"
        android:title="@string/create_a_place"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/progressBar"
        android:title="@string/loading"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/progress_bar" />

    <item
        android:id="@+id/logout"
        app:showAsAction="never"
        android:actionLayout="@layout/activity_main"
        android:title="@string/logout" />

</menu>