<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    android:paddingTop="5dp"
    android:paddingHorizontal="10dp">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:drawableLeft="@drawable/icon_search"
        android:drawableTint="@color/primary"
        android:layout_toStartOf="@id/btnSearch"
        android:hint="@string/search_dots" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/primary"
        android:layout_alignParentEnd="true"/>

    <RadioGroup
        android:id="@+id/rgSearchType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/etSearch" >
        <RadioButton android:id="@+id/radio_users"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/users"
            android:checked="true" />
        <RadioButton android:id="@+id/radio_places"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/places" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rgSearchType"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/rgSearchType"
        android:text="@string/no_results_found"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/rgSearchType"/>


</RelativeLayout>