<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePictureActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="25dp"
        android:textSize="25sp"
        android:text="@string/take_a_new_profile_picture"/>

    <RelativeLayout
        android:id="@+id/rlImage"
        android:layout_width="match_parent"
        android:layout_below="@id/tvTitle"
        android:layout_height="500dp" >

        <androidx.camera.view.PreviewView
            android:id="@+id/pvImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_margin="25dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlImage"
        android:textAllCaps="true"
        android:layout_centerInParent="true"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btnRetake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlImage"
        android:textAllCaps="true"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:text="@string/retake" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlImage"
        android:textAllCaps="true"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="@string/post" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlImage"
        android:visibility="gone"/>

</RelativeLayout>