<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_below="@id/ivLogo"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@id/tvUsername"
        android:hint="@string/username"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_below="@id/etUsername"
        android:layout_marginHorizontal="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@id/tvPassword"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/btnLogin"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/sign_up" />


</RelativeLayout>