<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:foreground="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaces"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvNoResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/seems_you_don_t_follow_anyone" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rlPromotion"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/paidPromotion"
            android:layout_alignStart="@id/mainCard"
            android:text="@string/paid_promotion"
            android:textColor="@color/white"
            android:layout_marginHorizontal="2dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_below="@id/paidPromotion"
            android:id="@+id/mainCard"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#fbfbfb"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="400dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/promotionImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/promotionTextTitle"
                    android:layout_below="@id/promotionImage"
                    android:text="@string/you_may_like"
                    android:textColor="@color/secondary"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/promotionName"
                    android:layout_below="@id/promotionTextTitle"
                    tools:text="Rupestre Comedor Rumano"
                    android:textColor="@color/secondary"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/promotionIgnore"
                    android:layout_below="@id/promotionName"
                    android:textAllCaps="true"
                    android:text="@string/ignore"
                    android:background="@drawable/rounded_background"
                    android:layout_width="130dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/promotionView"
                    android:layout_toEndOf="@id/promotionIgnore"
                    android:layout_below="@id/promotionName"
                    android:textAllCaps="true"
                    android:text="@string/view"
                    android:background="@drawable/rounded_background"
                    android:layout_width="130dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>